# autoNEWS

./: .gitignore  LICENSE  Makefile  README.md  autonews.db  autonews.icns  blog_summary.txt  pyproject.toml  setup.py  summary_20230928_100554.txt
autonews/: .project  api_handler.py  api_key.txt  autonews.db  chat_gpt_interface.py  db_handler.py  file_handler.py  gui.py  main.py  user_interface.py
autonews/db/: autonews.db
autonews/summary/: 2023_10_11_Andy Milburn.txt  2023_10_11_Dan Stine.txt  2023_10_11_Dinnie Muslihat.txt  2023_10_11_HELENA WAHLSTROM.txt  2023_10_11_Jaime Rosales.txt  2023_10_11_Jeff Bartels.txt  2023_10_11_Jeremy Tammik.txt  2023_10_11_Kean Walmsley.txt  2023_10_11_Krzysztof Wojslaw.txt  2023_10_11_revitdynamo.txt  2023_10_12_Poly Have.txt  2023_10_12_niko.txt  summary_20230928_115957.txt  summary_20230928_120334.txt  summary_20230928_120433.txt  summary_20230928_120530.txt  summary_20230928_120553.txt  summary_20230928_120852.txt  summary_20230928_120915.txt  summary_20230928_121157.txt  summary_20230928_121718.txt  summary_20230928_121753.txt  summary_20230929_191033.txt  summary_20230929_192053.txt  summary_20230930_194701.txt
sctipts/: install_gum.py
summary/: summary_20230928_105817.txt
tests/: autonews.db  test_db_handler.py
